# test-api.requests

./: .env  .env.template  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
helpers/: allure.py  checkers.py  db.py  service_data.py
services/: api_client.py
services/comments/: comments.py  models.py  payloads.py
services/pages/: models.py  pages.py  payloads.py
services/posts/: models.py  payloads.py  posts.py
services/users/: models.py  payloads.py  users.py
tests/: conftest.py  test_comments.py  test_pages.py  test_posts.py  test_users.py
tests/test_comments/: conftest.py
tests/test_pages/: conftest.py  test_pages.py
tests/test_posts/: conftest.py
tests/test_users/: conftest.py
